[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "evoc"
version = "0.3.0"
authors = [{name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}]
maintainers = [{name = "Leland McInnes", email = "leland.mcinnes@gmail.com"}]
description = "Embedding Vector Oriented Clustering"
readme = "README.rst"
keywords = ["embedding vector", "vector database", "topic modelling", "cluster", "clustering"]
license = "BSD-2-Clause"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
urls = {Homepage = "https://github.com/TutteInstitute/evoc"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.1",
    "numba>=0.59",
    "tqdm",
]

[tool.setuptools]
zip-safe = false
packages = ["evoc"]
include-package-data = false