[metadata]
name = evoc
version = 0.1.3
author = Leland McInnes
author_email = leland.mcinnes@gmail.com
maintainer = Leland McInnes
maintainer_email = leland.mcinnes@gmail.com
description = Embedding Vector Oriented Clustering
long_description = file: README.rst
keywords = embedding vector, vector database, topic modelling, cluster, clustering
url = https://github.com/TutteInstitute/evoc
license = BSD License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
zip_safe = False
packages = evoc
python_requires = >=3.10
install_requires =
    numpy>=1.21
    scikit-learn>=1.1
    numba>=0.59
    tqdm
